NEXT RELEASE
 - First release of the redesigned o-attributes.js.
 - Rename from o-attribute.js to o-attributes.js.
